objects/BMCServiceDesk__BMC_PointingDevice__c.object
<CustomObject>
    <description>BMC_PointingDevice. CMDB Class that stores information about devices that you use to control the movement of a pointer to select items on a display screen. Pointing devices include a mouse, digitizing pad, track ball, and touch pad. This class corresponds to the DMTF CIM_PointingDevice class.</description>
    <fields>
        <fullName>BMCServiceDesk__Device_Interface__c</fullName>
        <label>Device Interface</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Serial</fullName>
                </value>
                <value>
                    <fullName>PS/2</fullName>
                </value>
                <value>
                    <fullName>Infrared</fullName>
                </value>
                <value>
                    <fullName>HP-HIL</fullName>
                </value>
                <value>
                    <fullName>Bus mouse</fullName>
                </value>
                <value>
                    <fullName>ADB (Apple Desktop Bus)</fullName>
                </value>
                <value>
                    <fullName>Bus mouse DB-9</fullName>
                </value>
                <value>
                    <fullName>Bus mouse micro-DIN</fullName>
                </value>
                <value>
                    <fullName>USB</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Number_of_Buttons__c</fullName>
        <label>Number of Buttons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Pointing_Type__c</fullName>
        <label>Pointing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mouse</fullName>
                </value>
                <value>
                    <fullName>Track Ball</fullName>
                </value>
                <value>
                    <fullName>Track Point</fullName>
                </value>
                <value>
                    <fullName>Glide Point</fullName>
                </value>
                <value>
                    <fullName>Touch Pad</fullName>
                </value>
                <value>
                    <fullName>Touch Screen</fullName>
                </value>
                <value>
                    <fullName>Mouse - Optical Sensor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Pointing Device</label>
    <nameField>
        <label>Pointing Device Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pointing Devices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>